microk8s/istio/routing-simple/destination-rule/kubernetes-quickstart-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kubernetes-quickstart-dr
  namespace: quarkus-apero-code
spec:
  host: kubernetes-quickstart
  subsets:
    - name: v1
      labels:
        version: 1.0.0-SNAPSHOT
#    - name: v2
#      labels:
#        version: 2.0.0-SNAPSHOT
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
